--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,11 @@
 [tox]
 minversion = 3.4.0
-envlist = py312
+envlist =
+    unittest
+    py{312}
 
 [testenv]
+description = Run basic usage senario
 commands =
     qrsvg --help
     qrsvg test\svg\cincida.svg \
@@ -10,3 +13,9 @@ commands =
           --output {envtmpdir}\output.svg \
           --margin 1 \
           --blur 1
+    qrsvg-meta -c {envtmpdir}\output.svg
+
+[testenv:unittest]
+description = Run unittests
+extras = dev
+commands = python -m pytest
